--- a/generalStore/Views/Products/Details.cshtml
+++ b/generalStore/Views/Products/Details.cshtml
@@ -103,14 +103,17 @@
                             <i class="fa fa-minus"></i>
                         </button>
                     </div>
-                    <input type="text" class="form-control bg-secondary text-center" value="1">
+                    <input id="txtsoLuong" name="txtsoLuong" type="text" class="form-control bg-secondary text-center" value="1">
                     <div class="input-group-btn">
                         <button class="btn btn-primary btn-plus">
                             <i class="fa fa-plus"></i>
                         </button>
                     </div>
                 </div>
-                <a href="/Cart/AddToCart/?ProductId=@Model.ProductId" class="btn btn-primary px-3"><i class="fa fa-shopping-cart mr-1"></i> Add To Cart</a>
+                <li class="add-to-cart">
+                    <a href="javascript:void(0)" @*href="/Cart/AddToCart/?ProductId=@Model.ProductId"*@ class="btn btn-primary px-3"><i class="fa fa-shopping-cart mr-1"></i> Add To Cart</a>
+                    <input hidden asp-for="ProductId"/>
+                </li>
             </div>
             <div class="d-flex pt-2">
                 <p class="text-dark font-weight-medium mb-0 mr-2">Share on:</p>
@@ -239,3 +242,33 @@
     </div>
 </div>
 <!-- Shop Detail End -->
+@section Scripts {
+    <script>
+        $(document).ready(function (){
+            $(".add-to-cart").click(function (){
+                var productid = $('#ProductId').val();
+                var soLuong = $('#txtsoLuong').val();
+                $.ajax({
+                    url: '/api/cart/add',
+                    type: "POST",
+                    dataType: "JSON",
+                    data: {
+                        productID: productid,
+                        amount: soLuong
+                    },
+                    success: function (response) {
+                        loadHeaderCart();
+                        location.reload();
+                    },
+                    error: function (error) {
+                        alert("There was an error posting the data to the server: " + error.responseText);
+                    }
+                });
+            });
+        });
+
+        function loadHeaderCart() {
+            $("#numberCart").load("/AjaxContent/Numbercart");
+        }
+    </script>
+}
