done cart and update Admin

--- a/generalStore/Areas/Admin/Views/AdminCustomers/Index.cshtml
+++ b/generalStore/Areas/Admin/Views/AdminCustomers/Index.cshtml
@@ -23,7 +23,7 @@
                 @Html.DisplayNameFor(model => model.Avatar)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Addres)
+                @Html.DisplayNameFor(model => model.Address)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Email)
@@ -71,7 +71,7 @@
                 @Html.DisplayFor(modelItem => item.Avatar)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Addres)
+                @Html.DisplayFor(modelItem => item.Address)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Email)
