--- a/generalStore/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/generalStore/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -161,6 +161,7 @@
     <!-- Template Javascript -->
     <script src="/Adminassets/js/main.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
+    @await Component.InvokeAsync("Notyf")
 </body>
 
 </html>
