--- a/generalStore/Areas/Admin/Views/AdminCustomers/Create.cshtml
+++ b/generalStore/Areas/Admin/Views/AdminCustomers/Create.cshtml
@@ -29,9 +29,9 @@
                 <span asp-validation-for="Avatar" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Addres" class="control-label"></label>
-                <input asp-for="Addres" class="form-control" />
-                <span asp-validation-for="Addres" class="text-danger"></span>
+                <label asp-for="Address" class="control-label"></label>
+                <input asp-for="Address" class="form-control" />
+                <span asp-validation-for="Address" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
