--- a/generalStore/Areas/Admin/Views/AdminCustomers/Delete.cshtml
+++ b/generalStore/Areas/Admin/Views/AdminCustomers/Delete.cshtml
@@ -31,10 +31,10 @@
             @Html.DisplayFor(model => model.Avatar)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Addres)
+            @Html.DisplayNameFor(model => model.Address)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Addres)
+            @Html.DisplayFor(model => model.Address)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Email)
