--- a/generalStore/Areas/Admin/Views/Shared/_SidebarStart.cshtml
+++ b/generalStore/Areas/Admin/Views/Shared/_SidebarStart.cshtml
@@ -29,7 +29,7 @@
             <div class="nav-item dropdown">
                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-laptop me-2"></i>Quản lý hệ thống</a>
                 <div class="dropdown-menu bg-transparent border-0">
-                    <a asp-area="Admin" asp-controller="Accounts" asp-action="Index" class="dropdown-item">Quản lý quyền tài khoản</a>
+                    <a asp-area="Admin" asp-controller="AdminAccounts" asp-action="Index" class="dropdown-item">Quản lý quyền tài khoản</a>
                     <a asp-area="Admin" asp-controller="AdminRoles" asp-action="Index" class="dropdown-item">Quản lý quyền truy cập</a>
                 </div>
             </div>
