--- a/generalStore/Views/Products/Details.cshtml
+++ b/generalStore/Views/Products/Details.cshtml
@@ -44,7 +44,7 @@
                 </div>
                 <small class="pt-1">(50 Reviews)</small>
             </div>
-            <h3 class="font-weight-semi-bold mb-4">$@(Model.ProductPrice * (1 - Model.ProductDiscount))</h3>
+            <h3 class="font-weight-semi-bold mb-4">$@(Model.ProductPrice * (1 - (Model.ProductDiscount)))</h3>
             <p class="mb-4">@Model.ProductDescription</p>
             <div class="d-flex mb-3">
                 <p class="text-dark font-weight-medium mb-0 mr-3">Sizes:</p>
@@ -110,10 +110,8 @@
                         </button>
                     </div>
                 </div>
-                <li class="add-to-cart">
-                    <a href="javascript:void(0)" @*href="/Cart/AddToCart/?ProductId=@Model.ProductId"*@ class="btn btn-primary px-3"><i class="fa fa-shopping-cart mr-1"></i> Add To Cart</a>
-                    <input hidden asp-for="ProductId"/>
-                </li>
+                <a href="javascript:void(0)" class="add-to-cart btn btn-primary px-3"><i class="fa fa-shopping-cart mr-1"></i> Add To Cart</a>
+                <input hidden asp-for="ProductId" />
             </div>
             <div class="d-flex pt-2">
                 <p class="text-dark font-weight-medium mb-0 mr-2">Share on:</p>
@@ -244,8 +242,8 @@
 <!-- Shop Detail End -->
 @section Scripts {
     <script>
-        $(document).ready(function (){
-            $(".add-to-cart").click(function (){
+        $(document).ready(function () {
+            $(".add-to-cart").click(function () {
                 var productid = $('#ProductId').val();
                 var soLuong = $('#txtsoLuong').val();
                 $.ajax({
