--- a/generalStore/Views/Shared/_Layout.cshtml
+++ b/generalStore/Views/Shared/_Layout.cshtml
@@ -82,13 +82,10 @@
                     <i class="fas fa-heart text-primary"></i>
                     <span class="badge">0</span>
                 </a>
-                
-                    @await Component.InvokeAsync("CartWidget")
-                <a href="/tai-khoan-cua-toi" class="btn border">
-                    <i class="fas fa-heart text-primary"></i>
-                </a>
-
                     @await Component.InvokeAsync("NumberCart")
+                <a href="/tai-khoan-cua-toi" class="btn border">
+                    <i class="fas fa-solid fa-user text-primary"></i>
+                </a>                 
             </div>
         </div>
     </div>
@@ -122,7 +119,6 @@
                             <a href="/Contact" class="nav-item nav-link">Contact</a>
                         </div>
                         <div class="navbar-nav ml-auto py-0">   
-                            @*<div>@(Json.Serialize(User.Identity))</div>*@
                             @if(User.Identity.IsAuthenticated)
                             {                              
                                 <a href="/logout" as class="nav-item nav-link">Logout</a>
