--- a/generalStore/Views/Shared/_Product.cshtml
+++ b/generalStore/Views/Shared/_Product.cshtml
@@ -12,7 +12,37 @@
         </div>
         <div class="card-footer d-flex justify-content-between bg-light border">
             <a href="/Products/Details/?id=@Model.ProductId" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
-            <a href="/Cart/AddToCart/?ProductId=@Model.ProductId" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Add To Cart</a>
+            <a href="javascript:void(0)" class="add-to-cart btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Add To Cart</a>
+            <input hidden asp-for="ProductId" />
         </div>
     </div>
 </div>
+
+@section Scripts {
+    <script>
+        $(document).ready(function () {
+            $(".add-to-cart").click(function () {
+                var productid = $('#ProductId').val();
+                $.ajax({
+                    url: '/api/cart/add',
+                    type: "POST",
+                    dataType: "JSON",
+                    data: {
+                        productID: productid
+                    },
+                    success: function (response) {
+                        loadHeaderCart();
+                        location.reload();
+                    },
+                    error: function (error) {
+                        alert("There was an error posting the data to the server: " + error.responseText);
+                    }
+                });
+            });
+        });
+
+        function loadHeaderCart() {
+            $("#numberCart").load("/AjaxContent/Numbercart");
+        }
+    </script>
+}
